implemented write operation in opcua command line tool

--- a/ua/uaclient/Makefile.am
+++ b/ua/uaclient/Makefile.am
@@ -37,7 +37,10 @@ if BUILD_UA_CMD
 
 bin_PROGRAMS = opcua
 
-opcua_SOURCES = src/main.cpp
+opcua_SOURCES = \
+  src/opcua_main.cpp \
+  src/opcua_options.cpp
+
 opcua_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES)
 opcua_LDADD = libuaclient.a
 opcua_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lboost_program_options -lpthread -Wl,-z,defs 
