--- a/ua/uaclient/Makefile.in
+++ b/ua/uaclient/Makefile.in
@@ -115,8 +115,9 @@ libuaclient_test_DEPENDENCIES = libuaclient.a
 libuaclient_test_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(libuaclient_test_LDFLAGS) $(LDFLAGS) -o $@
-am__opcua_SOURCES_DIST = src/main.cpp
-@BUILD_UA_CMD_TRUE@am_opcua_OBJECTS = opcua-main.$(OBJEXT)
+am__opcua_SOURCES_DIST = src/opcua_main.cpp src/opcua_options.cpp
+@BUILD_UA_CMD_TRUE@am_opcua_OBJECTS = opcua-opcua_main.$(OBJEXT) \
+@BUILD_UA_CMD_TRUE@	opcua-opcua_options.$(OBJEXT)
 opcua_OBJECTS = $(am_opcua_OBJECTS)
 @BUILD_UA_CMD_TRUE@opcua_DEPENDENCIES = libuaclient.a
 opcua_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
@@ -319,7 +320,10 @@ libuaclient_a_SOURCES = \
   src/stream_attribute.h
 
 libuaclient_a_CPPFLAGS = -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(URI_INCLUDES)
-@BUILD_UA_CMD_TRUE@opcua_SOURCES = src/main.cpp
+@BUILD_UA_CMD_TRUE@opcua_SOURCES = \
+@BUILD_UA_CMD_TRUE@  src/opcua_main.cpp \
+@BUILD_UA_CMD_TRUE@  src/opcua_options.cpp
+
 @BUILD_UA_CMD_TRUE@opcua_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES)
 @BUILD_UA_CMD_TRUE@opcua_LDADD = libuaclient.a
 @BUILD_UA_CMD_TRUE@opcua_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lboost_program_options -lpthread -Wl,-z,defs 
@@ -498,7 +502,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_endpoints.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_session.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_view.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-main.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-opcua_main.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-opcua_options.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -633,19 +638,33 @@ libuaclient_test-computer_view.obj: tests/computer_view.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libuaclient_test-computer_view.obj `if test -f 'tests/computer_view.cpp'; then $(CYGPATH_W) 'tests/computer_view.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/computer_view.cpp'; fi`
 
-opcua-main.o: src/main.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-main.o -MD -MP -MF $(DEPDIR)/opcua-main.Tpo -c -o opcua-main.o `test -f 'src/main.cpp' || echo '$(srcdir)/'`src/main.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-main.Tpo $(DEPDIR)/opcua-main.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/main.cpp' object='opcua-main.o' libtool=no @AMDEPBACKSLASH@
+opcua-opcua_main.o: src/opcua_main.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-opcua_main.o -MD -MP -MF $(DEPDIR)/opcua-opcua_main.Tpo -c -o opcua-opcua_main.o `test -f 'src/opcua_main.cpp' || echo '$(srcdir)/'`src/opcua_main.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-opcua_main.Tpo $(DEPDIR)/opcua-opcua_main.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/opcua_main.cpp' object='opcua-opcua_main.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-main.o `test -f 'src/main.cpp' || echo '$(srcdir)/'`src/main.cpp
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-opcua_main.o `test -f 'src/opcua_main.cpp' || echo '$(srcdir)/'`src/opcua_main.cpp
 
-opcua-main.obj: src/main.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-main.obj -MD -MP -MF $(DEPDIR)/opcua-main.Tpo -c -o opcua-main.obj `if test -f 'src/main.cpp'; then $(CYGPATH_W) 'src/main.cpp'; else $(CYGPATH_W) '$(srcdir)/src/main.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-main.Tpo $(DEPDIR)/opcua-main.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/main.cpp' object='opcua-main.obj' libtool=no @AMDEPBACKSLASH@
+opcua-opcua_main.obj: src/opcua_main.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-opcua_main.obj -MD -MP -MF $(DEPDIR)/opcua-opcua_main.Tpo -c -o opcua-opcua_main.obj `if test -f 'src/opcua_main.cpp'; then $(CYGPATH_W) 'src/opcua_main.cpp'; else $(CYGPATH_W) '$(srcdir)/src/opcua_main.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-opcua_main.Tpo $(DEPDIR)/opcua-opcua_main.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/opcua_main.cpp' object='opcua-opcua_main.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-main.obj `if test -f 'src/main.cpp'; then $(CYGPATH_W) 'src/main.cpp'; else $(CYGPATH_W) '$(srcdir)/src/main.cpp'; fi`
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-opcua_main.obj `if test -f 'src/opcua_main.cpp'; then $(CYGPATH_W) 'src/opcua_main.cpp'; else $(CYGPATH_W) '$(srcdir)/src/opcua_main.cpp'; fi`
+
+opcua-opcua_options.o: src/opcua_options.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-opcua_options.o -MD -MP -MF $(DEPDIR)/opcua-opcua_options.Tpo -c -o opcua-opcua_options.o `test -f 'src/opcua_options.cpp' || echo '$(srcdir)/'`src/opcua_options.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-opcua_options.Tpo $(DEPDIR)/opcua-opcua_options.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/opcua_options.cpp' object='opcua-opcua_options.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-opcua_options.o `test -f 'src/opcua_options.cpp' || echo '$(srcdir)/'`src/opcua_options.cpp
+
+opcua-opcua_options.obj: src/opcua_options.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-opcua_options.obj -MD -MP -MF $(DEPDIR)/opcua-opcua_options.Tpo -c -o opcua-opcua_options.obj `if test -f 'src/opcua_options.cpp'; then $(CYGPATH_W) 'src/opcua_options.cpp'; else $(CYGPATH_W) '$(srcdir)/src/opcua_options.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-opcua_options.Tpo $(DEPDIR)/opcua-opcua_options.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/opcua_options.cpp' object='opcua-opcua_options.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-opcua_options.obj `if test -f 'src/opcua_options.cpp'; then $(CYGPATH_W) 'src/opcua_options.cpp'; else $(CYGPATH_W) '$(srcdir)/src/opcua_options.cpp'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
