--- a/ua/uaclient/configure.ac
+++ b/ua/uaclient/configure.ac
@@ -8,7 +8,7 @@
 
 AC_INIT
 AC_CONFIG_AUX_DIR([.])
-AC_CONFIG_SRCDIR([src/main.cpp])
+AC_CONFIG_SRCDIR([src/opcua_main.cpp])
 AM_INIT_AUTOMAKE([libuaclient], [0.1.0], [rykovanov.as@gmail.com])
 
 CXXFLAGS="-O0 -g -Wall -std=c++0x"
