build fix. Fixed tests in opcua to avoid segmentation fault

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ SUBDIRS = \
           opctestlinux \
           libtestopcserver \
           ua/libuamappings \
-          ua/uaclient
+          ua/server
 
 EXTRA_DIST = configure.main
 
