--- a/ua/server/configure.ac
+++ b/ua/server/configure.ac
@@ -9,7 +9,7 @@
 AC_INIT
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SRCDIR([src/opcua_main.cpp])
-AM_INIT_AUTOMAKE([libuaclient], [0.1.0], [rykovanov.as@gmail.com])
+AM_INIT_AUTOMAKE([opcua], [0.1.0], [rykovanov.as@gmail.com])
 
 CXXFLAGS="-O0 -g -Wall -std=c++0x"
 
@@ -80,6 +80,8 @@ AC_ARG_ENABLE([ua-cmd],
               [
               ])
 
+AM_CONDITIONAL([BUILD_UA_CMD], [test x$enable_ua_cmd = xyes])
+
 AC_ARG_WITH([testserver-uri], 
             [AS_HELP_STRING([--with-testserver-uri=uri], [defines uri of the server for performing testing of client.])],
             [ 
@@ -90,7 +92,6 @@ AC_ARG_WITH([testserver-uri],
             ])
 
 
-AM_CONDITIONAL([BUILD_UA_CMD], [test x$enable_ua_cmd = xyes])
 
 
 #check headers
