--- a/Makefile.in
+++ b/Makefile.in
@@ -192,7 +192,7 @@ SUBDIRS = \
           opctestlinux \
           libtestopcserver \
           ua/libuamappings \
-          ua/uaclient
+          ua/server
 
 EXTRA_DIST = configure.main
 all: all-recursive
