--- a/ua/server/Makefile.am
+++ b/ua/server/Makefile.am
@@ -25,22 +25,15 @@ uaclientinclude_HEADERS = \
   include/opc/ua/client/remote_computer.h \
   include/opc/ua/client/remote_connection.h
 
-
-lib_LIBRARIES = libuaclient.a
-libuaclient_a_SOURCES = \
+EXTRA_DIST = \
   src/internal/uri_facade.h \
   src/internal/thread.h \
   src/endpoints.h \
-  src/socket_channel.cpp \
-  src/computer.cpp \
-  src/binary_connection.cpp \
   src/stream_computer.h \
   src/stream_attribute.h
 
-libuaclient_a_CPPFLAGS = -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(URI_INCLUDES)
 
 TESTS = libuaclient_test
-
 
 bin_PROGRAMS =
 lib_LTLIBRARIES =
@@ -50,12 +43,18 @@ if BUILD_UA_CMD
 bin_PROGRAMS += opcua
 
 opcua_SOURCES = \
+  src/socket_channel.cpp \
+  src/computer.cpp \
+  src/binary_connection.cpp \
   src/opcua_main.cpp \
   src/opcua_options.cpp
 
-opcua_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES)
-opcua_LDADD = libuaclient.a
-opcua_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lboost_program_options -lpthread -Wl,-z,defs 
+
+INCLUDES= -I$(top_srcdir)/src -I$(top_srcdir)/include  $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
+
+opcua_CPPFLAGS = $(INCLUDES)
+opcua_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lboost_program_options -lpthread -Wl,-z,defs -no-undefined
 
 endif
 
@@ -64,34 +63,35 @@ uaserverinclude_HEADERS = \
   include/opc/ua/server/server.h \
   include/opc/ua/server/tcp_server.h
 
-lib_LIBRARIES += libopcuaserver.a
+#lib_LIBRARIES += libopcuaserver.a
+#libopcuaserver_a_SOURCES = \
+#  src/socket_channel.cpp \
+#  src/thread.cpp
 
-libopcuaserver_a_SOURCES = \
-  src/socket_channel.cpp \
-  src/thread.cpp
 
-
-libopcuaserver_a_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(URI_INCLUDES)
+libopcuaserver_a_CPPFLAGS = $(INCLUDES)
 
 bin_PROGRAMS += opcuaserver
 opcuaserver_SOURCES = \
   src/server/server_main.cpp \
   src/server/server_options.cpp \
-  src/server/server_options.h
+  src/server/server_options.h \
+  src/socket_channel.cpp \
+  src/thread.cpp
 
-opcuaserver_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
-opcuaserver_LDADD = libopcuaserver.a
-opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS)
+opcuaserver_CPPFLAGS = $(INCLUDES)
+opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -no-undefined
 
 TESTS += test_opcuaserver
 
 lib_LTLIBRARIES += libopcua_tcp_server.la
 libopcua_tcp_server_la_SOURCES = \
   src/server/tcp_server.cpp \
-  src/server/tcp_server_addon.cpp
+  src/server/tcp_server_addon.cpp \
+  src/socket_channel.cpp \
+  src/thread.cpp
 
-libopcua_tcp_server_la_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(URI_INCLUDES) $(OPC_CORE_INCLUDES) $(UA_MAPPING_INCLUDES)
-libopcua_tcp_server_la_LIBADD = libopcuaserver.a
+libopcua_tcp_server_la_CPPFLAGS = $(INCLUDES)
 libopcua_tcp_server_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
 
 TESTS += test_tcp_server_addon
@@ -108,50 +108,47 @@ check_PROGRAMS = $(TESTS)
 
 # tests/binary_handshake.cpp
 libuaclient_test_SOURCES =  \
- tests/computer_attribute.cpp \
- tests/computer_connect.cpp \
- tests/computer_endpoints.cpp \
- tests/computer_session.cpp \
- tests/computer_view.cpp
+  src/socket_channel.cpp \
+  src/computer.cpp \
+  src/binary_connection.cpp \
+  tests/computer_attribute.cpp \
+  tests/computer_connect.cpp \
+  tests/computer_endpoints.cpp \
+  tests/computer_session.cpp \
+  tests/computer_view.cpp
 
-libuaclient_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES)
-libuaclient_test_LDADD = libuaclient.a
-libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) $(URI_LIBS)
+libuaclient_test_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) $(URI_LIBS) -no-undefined
 
 if BUILD_UA_SERVER
 
-
 test_opcuaserver_SOURCES = \
- src/server/server_options.cpp \
- tests/server/test_server_options.cpp \
- tests/thread_test.cpp
+  src/server/server_options.cpp \
+  src/thread.cpp \
+  tests/server/test_server_options.cpp \
+  tests/thread_test.cpp
 
-test_opcuaserver_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES)
-test_opcuaserver_LDADD = libopcuaserver.a libuaclient.a
-test_opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
+test_opcuaserver_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+test_opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
 
 test_tcp_server_SOURCES = \
- tests/server/tcp_server_test.cpp
+  src/socket_channel.cpp \
+  src/computer.cpp \
+  src/binary_connection.cpp \
+  src/server/tcp_server.cpp \
+  src/thread.cpp \
+  tests/server/tcp_server_test.cpp
 
-test_tcp_server_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
-test_tcp_server_LDADD = libopcuaserver.a libuaclient.a libopcua_tcp_server.la
+test_tcp_server_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
 test_tcp_server_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
 
 test_tcp_server_addon_SOURCES = \
- tests/server/tcp_server_addon_test.cpp
+  src/binary_connection.cpp \
+  src/socket_channel.cpp \
+  tests/server/tcp_server_addon_test.cpp
 
-test_tcp_server_addon_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
-test_tcp_server_addon_LDADD = libopcuaserver.a libuaclient.a 
+test_tcp_server_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
 test_tcp_server_addon_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
-
-
-#bin_PROGRAMS += libopcua_server_test
-
-
-#libopcua_server_test_SOURCES =  \
-#libopcua_server_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES)
-#libopcua_server_test_LDADD = libopcuaserver.a
-#libopcua_server_test_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lboost_program_options -lboost_thread -lpthread  $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs
 
 endif
 
