--- a/ua/server/Makefile.am
+++ b/ua/server/Makefile.am
@@ -110,7 +110,7 @@ lib_LTLIBRARIES += libopcua_endpoints.la
 addonsinclude_HEADERS += include/opc/ua/server/addons/endpoints.h
 libopcua_endpoints_la_SOURCES = src/server/endpoints_addon.cpp
 libopcua_endpoints_la_CPPFLAGS = $(INCLUDES)
-libopcua_endpoints_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
+libopcua_endpoints_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
 TESTS += test_endpoints_addon
 
 TESTS += test_tcp_server
